# RL-100

./: .gitignore  .gitmodules  CHANGES_20260309.md  CHANGES_20260309_SESSION2.md  PAPER_CODE_AUDIT.md  README.md  RL100_剩余问题修复说明_20260313.md  VIB_IL_IMPLEMENTATION.md  exp_result.md  memo.md  pyproject.toml  train.sh  train_debug.sh  train_rl100.sh
3D-Diffusion-Policy/: CHANGES.md  RL100_MODIFICATIONS.md  RL100_中文指南.md  eval_rl100.py  result.md  train_rl100.py
3D-Diffusion-Policy/diffusion_policy_3d/: rl100_trainer.py
3D-Diffusion-Policy/diffusion_policy_3d/config/: rl100.yaml
3D-Diffusion-Policy/diffusion_policy_3d/config/task/: metaworld_basketball.yaml  metaworld_button-press-topdown-wall.yaml  metaworld_dial-turn.yaml  metaworld_disassemble.yaml  metaworld_door-open.yaml  metaworld_drawer-open.yaml  metaworld_faucet-open.yaml  metaworld_hand-insert.yaml  metaworld_handle-press.yaml  metaworld_handle-pull-side.yaml  metaworld_handle-pull.yaml  metaworld_peg-insert-side.yaml  (+10 more)
3D-Diffusion-Policy/diffusion_policy_3d/dataset/: metaworld_dataset.py
3D-Diffusion-Policy/diffusion_policy_3d/env_runner/: metaworld_runner.py
3D-Diffusion-Policy/diffusion_policy_3d/policy/: dp3.py  rl100_policy.py
original/: README.md
original/3D-Diffusion-Policy/: verify_zarr.py
scripts/: eval_policy.py  gen_demonstration_metaworld.sh  make_sim_dataset.py  train_rl100_sim.py
src/rl_100/: lerobot_dataset_utils.py
src/rl_100/env/: genesis_env.py
src/rl_100/training/: rl100_consistency.py  rl100_critics.py  rl100_dataset.py  rl100_policy.py  rl100_transition.py  sim_rl100.py
(+36 files in other folders)
