[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl-100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "genesis-world>=0.4.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rl_100"]
